--- a/component/header/Header.module.css
+++ b/component/header/Header.module.css
@@ -1,28 +1,24 @@
+/* Basic styling */
 .nav_bar {
-  background: #222;
-  padding: 0 15px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background: #0a0204;
+  padding: 0 150px;
   font-family: "mazdatypeviet-bold", Helvetica, Arial, sans-serif;
   z-index: 30;
   position: relative;
   background-color: #070707;
   background-size: cover;
-  background-position: 50% 0;
-  transition-duration: 0.3s, 0.3s;
-  transition-timing-function: ease, ease;
-  transition-delay: 0s, 0s;
 }
 .link {
   color: white;
   text-decoration: none;
-  font-weight: 700;
+  font-weight: 530;
 }
 .menu,
 .sub_menu {
   list-style-type: none;
-}
-.logo {
-  font-size: 20px;
-  padding: 7.5px 10px 7.5px 0;
 }
 .item {
   padding: 10px;
@@ -31,12 +27,9 @@
 .item .link:hover::after {
   color: #777;
 }
-
-/* Mobile menu */
 .menu {
   display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
 }
 .menu li .link {
@@ -46,82 +39,83 @@
 .menu .subitem .link {
   padding: 15px;
 }
-.toggle {
-  order: 1;
-  font-size: 20px;
-}
-.item {
-  order: 3;
-  width: 100%;
-  text-align: center;
+
+.hamburger_icon {
+  margin: auto 0;
   display: none;
-}
-.active .item {
-  display: block;
+  cursor: pointer;
 }
 
-/* Submenu up from mobile screens */
+.hamburger_icon div {
+  width: 35px;
+  height: 3px;
+  background-color: white;
+  margin: 6px 0;
+  transition: 0.4s;
+}
+.has_sub_menu {
+  position: relative;
+}
+
+.has_sub_menu:hover .sub_menu_wrapper > .sub_menu {
+  display: flex;
+  flex-flow: column nowrap;
+  position: absolute;
+  z-index: 10000;
+  top: 60px;
+  left: 20px;
+  padding: 10px 30px;
+  background-color: #ffffff;
+  box-shadow: 1px 1px 1px 1px #777;
+}
+.sub_menu > .sub_item > .link {
+  padding: 0;
+  width: 200px;
+  line-height: 40px;
+  text-align: left;
+  color: #828282;
+  font-weight: 400;
+}
 .sub_menu {
   display: none;
 }
-.sub_menu-active .sub_menu {
-  display: block;
-}
-.has_sub_menu i {
-  font-size: 12px;
-}
-.has_submenu > .link::after {
-  font-family: "Font Awesome 5 Free";
-  font-size: 12px;
-  line-height: 16px;
-  font-weight: 900;
-  content: "\f078";
-  color: white;
-  padding-left: 5px;
-}
-.sub_item .link {
-  padding: 10px 15px;
-}
-.sub_menu_active {
-  background-color: #111;
-  border-radius: 3px;
-}
 
 /* Desktop menu */
-@media all and (min-width: 960px) {
-  .menu {
-    align-items: center;
-    flex-wrap: nowrap;
-    background: none;
-    padding: 0 200px;
-  }
-  .item_wrapper {
-    display: flex;
-    align-items: center;
-    flex-wrap: nowrap;
-    background: none;
-  }
-  .logo {
-    order: 0;
-  }
-  .item {
-    order: 1;
+@media only screen and (max-width: 600px) {
+  .header {
     position: relative;
-    display: block;
-    width: auto;
   }
-
-  .sub_menu_active .sub_menu {
-    display: block;
-    position: absolute;
-    left: 0;
-    top: 68px;
-    background: #111;
+  .nav_bar {
+    padding: 0 20px;
   }
-  .toggle {
+  .menu {
     display: none;
   }
-  .sub_menu_active {
-    border-radius: 0;
+  .open_menu {
+    background-color: #1d1f1d;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+    position: absolute;
+    top: 85px;
+    left: 0;
+    width: 100%;
+    transition: flex-basis 500ms ease-in-out;
+  }
+  .hamburger_icon {
+    display: block;
+  }
+
+  .open_bar1 {
+    transform: rotate(-45deg) translate(-6px, 6px);
+  }
+
+  .open_bar2 {
+    opacity: 0;
+  }
+
+  .open_bar3 {
+    transform: rotate(45deg) translate(-6px, -8px);
   }
 }
