implement main section and footer

--- a/component/footer/Footer.module.css
+++ b/component/footer/Footer.module.css
@@ -1,8 +1,5 @@
 .footer_wrapper {
   background-color: #0a0204;
-  position: absolute;
-  width: 100%;
-  bottom: 0;
 }
 
 .footer_wrapper > .footer_inner_wrapper {
@@ -10,33 +7,28 @@
 }
 
 .footer {
-  display: flex;
-  flex-flow: row nowrap;
-  align-items: center;
-  justify-content: space-around;
-  padding: 50px 300px;
+  width: 100%;
+}
+.col_wrapper {
+  margin: auto;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 200px;
+  padding: 50px;
+  max-width: 1140px;
 }
 
 .col_1_inner {
-  max-width: 80%;
   color: white;
   font-weight: 120%;
 }
 
 .col_2_inner {
-  max-width: 100%;
   color: white;
   font-weight: 120%;
 }
 
 .col_3_inner {
-  color: white;
-  font-weight: 120%;
-}
-
-.col_3 {
-  text-align: center;
-  width: 200px;
   color: white;
   font-weight: 120%;
 }
@@ -49,20 +41,11 @@
   font-size: 20px;
 }
 
-.social_icon_wrapper {
-  display: flex;
-  font-size: 30px;
-  justify-content: center;
-  gap: 5px;
-  align-items: center;
-}
-
-.mail_icon:hover {
-  background-color: burlywood;
-}
-.phone_icon:hover {
-  background-color: rgb(141, 58, 58);
-}
-.youtube_icon:hover {
-  background-color: rgb(90, 58, 119);
+/* mobile menu */
+@media only screen and (max-width: 600px) {
+  .col_wrapper {
+    display: grid;
+    grid-gap: 50px;
+    grid-template-columns: 1fr;
+  }
 }
