--- a/component/header/Header.module.css
+++ b/component/header/Header.module.css
@@ -1,4 +1,7 @@
 /* Basic styling */
+.header {
+  width: 100%;
+}
 .nav_bar {
   display: flex;
   justify-content: space-between;
@@ -7,7 +10,6 @@
   padding: 0 150px;
   font-family: "mazdatypeviet-bold", Helvetica, Arial, sans-serif;
   z-index: 30;
-  position: relative;
   background-color: #070707;
   background-size: cover;
 }
@@ -58,29 +60,35 @@
 }
 
 .has_sub_menu:hover .sub_menu_wrapper > .sub_menu {
-  display: flex;
-  flex-flow: column nowrap;
-  position: absolute;
-  z-index: 10000;
-  top: 60px;
-  left: 20px;
+  width: 150px;
+  visibility: visible;
+  opacity: 1;
+  z-index: 1;
+  transform: translateY(0);
+  transition-delay: 0s, 0s, 0.3s;
+  background-color: #070707;
   padding: 10px 30px;
-  background-color: #ffffff;
-  box-shadow: 1px 1px 1px 1px #777;
 }
 .sub_menu > .sub_item > .link {
   padding: 0;
-  width: 200px;
   line-height: 40px;
   text-align: left;
   color: #828282;
   font-weight: 400;
 }
 .sub_menu {
-  display: none;
+  visibility: hidden;
+  opacity: 0;
+  position: absolute;
+  top: 80%;
+  left: 0;
+  width: 100%;
+  transform: translateY(-3em);
+  z-index: -1;
+  transition: all 0.8s ease 0s, visibility 0s linear 2s, z-index 0s linear 0.01s;
 }
 
-/* Desktop menu */
+/* mobile menu */
 @media only screen and (max-width: 600px) {
   .header {
     position: relative;
@@ -92,17 +100,29 @@
     display: none;
   }
   .open_menu {
-    background-color: #1d1f1d;
+    background-color: #070707;
     display: flex;
     flex-direction: column;
+    flex-grow: inherit;
     align-items: center;
     justify-content: flex-start;
     position: absolute;
-    top: 85px;
+    top: 0;
     left: 0;
     width: 100%;
-    transition: flex-basis 500ms ease-in-out;
+    opacity: 0.8;
   }
+
+  .sub_menu {
+    display: none;
+  }
+
+  .has_sub_menu:hover .sub_menu_wrapper > .sub_menu {
+    display: block;
+    position: relative;
+    text-align: center;
+  }
+
   .hamburger_icon {
     display: block;
   }
