--- a/component/footer/Footer.module.css
+++ b/component/footer/Footer.module.css
@@ -1,3 +1,67 @@
+.contact_discount {
+  width: 100%;
+  background-color: #777777;
+}
+
+.col_gap {
+  display: block;
+  height: auto;
+}
+.row_middle {
+  max-width: 1170px;
+  display: flex;
+  flex-flow: row wrap;
+  margin-left: auto;
+  margin-right: auto;
+  align-self: center !important;
+  vertical-align: middle !important;
+  align-items: center !important;
+}
+
+.col_left {
+  max-width: 75%;
+  flex-basis: 75%;
+}
+
+.col_left_inner {
+  width: 100%;
+  background-position: 50% 50%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  flex: 1 0 auto;
+}
+
+.col_left_inner .title {
+  color: #f1f1f1;
+  font-size: 180%;
+  font-weight: normal;
+  margin-block-start: 0.83em;
+  margin-block-end: 0.83em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+}
+
+.gap_element {
+  display: block;
+  height: auto;
+}
+
+.text {
+  color: #f1f1f1;
+  margin-top: 0;
+  margin-bottom: 1.3em;
+  display: block;
+  margin-block-start: 1em;
+  margin-block-end: 1em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+}
+
+.col_right_gap {
+  display: block;
+  height: auto;
+}
+
 .footer_wrapper {
   background-color: #0a0204;
 }
@@ -41,11 +105,48 @@
   font-size: 20px;
 }
 
+.phone {
+  display: block;
+  background-color: #00adef;
+  color: white;
+  padding: 10px 0;
+  text-align: center;
+  font-size: 120%;
+  font-weight: 600;
+}
+
 /* mobile menu */
 @media only screen and (max-width: 600px) {
+  .contact_discount {
+    padding-top: 30px;
+  }
   .col_wrapper {
     display: grid;
     grid-gap: 50px;
     grid-template-columns: 1fr;
+  }
+}
+
+@media screen and (min-width: 850px) {
+  .col_left {
+    max-width: 75%;
+    flex-basis: 75%;
+  }
+  .col_right {
+    max-width: 25%;
+    flex-basis: 25%;
+  }
+  .col_right_inner {
+    margin-right: auto;
+    margin-left: 0;
+    text-align: right;
+    width: 100%;
+    flex: 1 0 auto;
+  }
+  .text_wrapper {
+    font-size: 1rem;
+  }
+  .col_right_gap {
+    padding-top: 70px;
   }
 }
