--- a/component/footer/Footer.module.css
+++ b/component/footer/Footer.module.css
@@ -2,7 +2,6 @@
   width: 100%;
   background-color: #777777;
 }
-
 .col_gap {
   display: block;
   height: auto;
@@ -118,12 +117,62 @@
 /* mobile menu */
 @media only screen and (max-width: 600px) {
   .contact_discount {
-    padding-top: 30px;
+    padding: 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .col_left {
+    padding: 0 20px;
+    width: 100%;
+  }
+  .col_right {
+    padding: 0 20px;
+    width: 100%;
+  }
+  .phone {
+    display: inline-block;
+    padding: 5px 50px;
+    font-size: 16px;
   }
   .col_wrapper {
     display: grid;
     grid-gap: 50px;
     grid-template-columns: 1fr;
+  }
+}
+
+/* mobile menu */
+@media only screen and (max-width: 820px) {
+  .contact_discount {
+    padding: 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .col_left {
+    padding: 0 20px;
+    max-width: 100%;
+    flex-basis: 100%;
+  }
+  .col_right {
+    padding: 0 20px;
+    max-width: 100%;
+    flex-basis: 100%;
+  }
+
+  .col_wrapper {
+    display: grid;
+    grid-gap: 50px;
+    grid-template-columns: 1fr;
+  }
+
+  .col_right_inner {
+    margin-right: auto;
+    margin-left: 0;
+    text-align: right;
+    width: 40%;
+    flex: 1 0 auto;
   }
 }
 
