--- a/component/header/Header.module.css
+++ b/component/header/Header.module.css
@@ -107,10 +107,10 @@
     align-items: center;
     justify-content: flex-start;
     position: absolute;
-    top: 0;
+    top: 45px;
     left: 0;
     width: 100%;
-    z-index: 1;
+    z-index: 999999;
     opacity: 1;
   }
 
@@ -120,6 +120,7 @@
 
   .vertical_sub_menu {
     line-height: 30px;
+    text-align: center;
   }
 
   .hamburger_icon {
