--- a/component/header/Header.module.css
+++ b/component/header/Header.module.css
@@ -60,7 +60,7 @@
 }
 
 .has_sub_menu:hover .sub_menu_wrapper > .sub_menu {
-  width: 150px;
+  width: 200px;
   visibility: visible;
   opacity: 1;
   z-index: 1;
@@ -88,6 +88,80 @@
   transition: all 0.8s ease 0s, visibility 0s linear 2s, z-index 0s linear 0.01s;
 }
 
+/*vertical navbar*/
+.mobile_sidebar_content {
+  transform: translate(0, 0);
+  opacity: 1;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  width: 260px;
+  background-color: rgba(255, 255, 255, 0.95);
+  left: 0;
+  overflow-y: auto;
+  overflow-x: hidden;
+  box-shadow: 0px 0px 10px 0px rgb(0 0 0 / 50%);
+  display: inline-block;
+  vertical-align: middle;
+  max-width: 100%;
+  margin: 0 auto;
+  text-align: left;
+  z-index: 1045;
+}
+
+.sidebar_menu {
+  padding: 30px 0;
+}
+
+.nav_vertical {
+  width: 100%;
+  position: relative;
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+  margin: 0;
+  padding: 0;
+  list-style: disc;
+  list-style-position: initial;
+  list-style-image: initial;
+  list-style-type: disc;
+  margin-block-start: 1em;
+  margin-block-end: 1em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  padding-inline-start: 40px;
+}
+
+.nav_vertical_item {
+  list-style: none;
+  margin: 0;
+  width: 100%;
+  display: flex;
+  display: flex;
+  align-items: center;
+  padding: 0;
+  position: relative;
+  transition: background-color 0.3s;
+}
+
+.nav_vertical > .nav_vertical_item:hover {
+  background-color: rgba(0, 0, 0, 0.05);
+}
+
+.sub_nav_vertical {
+  display: none;
+}
+
+.suv_link:hover > .suv_nav_vertical {
+  display: block !important;
+  position: inherit;
+  opacity: 1;
+  left: auto;
+  padding-bottom: 30px;
+  transform: translateX(0);
+  transition: background-color 0.6s, transform 0.3s, opacity 0.3s,
+    -webkit-transform 0.3s;
+}
 /* mobile menu */
 @media only screen and (max-width: 600px) {
   .header {
