--- a/component/header/Header.module.css
+++ b/component/header/Header.module.css
@@ -1,6 +1,10 @@
 /* Basic styling */
 .header {
   width: 100%;
+  background: #0a0204;
+  display: flex;
+  flex-direction: row;
+  color: white;
 }
 .nav_bar {
   display: flex;
@@ -12,34 +16,6 @@
   z-index: 30;
   background-color: #070707;
   background-size: cover;
-}
-.link {
-  color: white;
-  text-decoration: none;
-  font-weight: 530;
-}
-.menu,
-.sub_menu {
-  list-style-type: none;
-}
-.item {
-  padding: 10px;
-}
-.item:not(.button) .link:hover,
-.item .link:hover::after {
-  color: #777;
-}
-.menu {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-}
-.menu li .link {
-  display: block;
-  padding: 15px 5px;
-}
-.menu .subitem .link {
-  padding: 15px;
 }
 
 .hamburger_icon {
@@ -55,39 +31,6 @@
   margin: 6px 0;
   transition: 0.4s;
 }
-.has_sub_menu {
-  position: relative;
-}
-
-.has_sub_menu:hover .sub_menu_wrapper > .sub_menu {
-  width: 200px;
-  visibility: visible;
-  opacity: 1;
-  z-index: 1;
-  transform: translateY(0);
-  transition-delay: 0s, 0s, 0.3s;
-  background-color: #070707;
-  padding: 10px 30px;
-}
-.sub_menu > .sub_item > .link {
-  padding: 0;
-  line-height: 40px;
-  text-align: left;
-  color: #828282;
-  font-weight: 400;
-}
-.sub_menu {
-  visibility: hidden;
-  opacity: 0;
-  position: absolute;
-  top: 80%;
-  left: 0;
-  width: 100%;
-  transform: translateY(-3em);
-  z-index: -1;
-  transition: all 0.8s ease 0s, visibility 0s linear 2s, z-index 0s linear 0.01s;
-}
-
 /*vertical navbar*/
 .mobile_sidebar_content {
   transform: translate(0, 0);
@@ -109,94 +52,16 @@
   z-index: 1045;
 }
 
-.sidebar_menu {
-  padding: 30px 0;
-}
-
-.nav_vertical {
-  width: 100%;
-  position: relative;
-  display: flex;
-  flex-flow: column;
-  align-items: center;
-  margin: 0;
-  padding: 0;
-  list-style: disc;
-  list-style-position: initial;
-  list-style-image: initial;
-  list-style-type: disc;
-  margin-block-start: 1em;
-  margin-block-end: 1em;
-  margin-inline-start: 0px;
-  margin-inline-end: 0px;
-  padding-inline-start: 40px;
-}
-
-.nav_vertical_item {
-  list-style: none;
-  margin: 0;
-  width: 100%;
-  display: flex;
-  display: flex;
-  align-items: center;
-  padding: 0;
-  position: relative;
-  transition: background-color 0.3s;
-}
-
-.nav_vertical > .nav_vertical_item:hover {
-  background-color: rgba(0, 0, 0, 0.05);
-}
-
-.sub_nav_vertical {
-  display: none;
-}
-
-.suv_link:hover > .suv_nav_vertical {
-  display: block !important;
-  position: inherit;
-  opacity: 1;
-  left: auto;
-  padding-bottom: 30px;
-  transform: translateX(0);
-  transition: background-color 0.6s, transform 0.3s, opacity 0.3s,
-    -webkit-transform 0.3s;
-}
 /* mobile menu */
 @media only screen and (max-width: 600px) {
   .header {
-    position: relative;
-  }
-  .nav_bar {
     padding: 0 20px;
+    justify-content: space-between;
+    color: white;
   }
-  .menu {
+  .menu_wrapper {
     display: none;
   }
-  .open_menu {
-    background-color: #070707;
-    display: flex;
-    flex-direction: column;
-    flex-grow: inherit;
-    align-items: center;
-    justify-content: flex-start;
-    position: absolute;
-    top: 45px;
-    left: 0;
-    width: 100%;
-    z-index: 999999;
-    opacity: 1;
-  }
-
-  .sub_menu {
-    display: none;
-  }
-
-  .vertical_sub_menu {
-    line-height: 30px;
-    text-align: center;
-  }
-
   .hamburger_icon {
     display: block;
   }
