--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -28,6 +28,11 @@
 .product_price {
   color: #777777;
 }
+
+.product_image {
+  width: 380px;
+  height: 213px;
+}
 /* mobile menu */
 @media only screen and (max-width: 600px) {
   .product_list {
