--- a/component/header/Header.module.css
+++ b/component/header/Header.module.css
@@ -14,7 +14,7 @@
   align-items: center;
   background: #0a0204;
   padding: 0 150px;
-  font-family: "mazdatypeviet-bold", Helvetica, Arial, sans-serif;
+  font-family: "Montserrat", sans-serif;
   z-index: 30;
   background-color: #070707;
   background-size: cover;
