--- a/component/footer/Footer.module.css
+++ b/component/footer/Footer.module.css
@@ -1,6 +1,7 @@
 .contact_discount {
   width: 100%;
   background-color: #777777;
+  font-family: "Montserrat", sans-serif;
 }
 .col_gap {
   display: block;
@@ -62,6 +63,7 @@
 }
 
 .footer_wrapper {
+  font-family: "Montserrat", sans-serif;
   background-color: #0a0204;
 }
 
@@ -100,10 +102,9 @@
   height: 10px;
 }
 
-.text_1_wrapper {
-  font-size: 20px;
+.text1 {
+  font-size: 18px;
 }
-
 .phone {
   display: block;
   background-color: #00adef;
