--- a/pages/o-to/mazda.module.css
+++ b/pages/o-to/mazda.module.css
@@ -21,7 +21,7 @@
 
 .car_infor .car_name {
   font-size: 140%;
-  font-family: "Roboto", sans-serif;
+  font-family: "Montserrat", sans-serif;
   color: black;
   text-transform: uppercase;
   font-weight: 700;
@@ -77,7 +77,7 @@
 
 .discount_infor {
   background-color: #00adef;
-  font-family: "Roboto", sans-serif;
+  font-family: "Montserrat", sans-serif;
   border-radius: 3px;
   color: white;
   padding: 5px;
@@ -105,7 +105,7 @@
 }
 
 .title {
-  font-family: "Roboto", sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-weight: 700;
   font-size: 1.6em;
   line-height: 1.3;
@@ -129,7 +129,7 @@
   color: black;
   font-size: 90%;
   text-transform: uppercase;
-  font-family: "mazdatypeviet-bold", Helvetica, Arial, sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-weight: bolder;
 }
 
