--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,6 +7,7 @@ body {
   display: flex;
   flex-direction: column;
   font-family: "Montserrat", sans-serif;
+  background-color: #e7e7e7;
 }
 
 * {
