--- a/component/header/Header.module.css
+++ b/component/header/Header.module.css
@@ -37,6 +37,11 @@
   color: rgb(207, 204, 204) !important;
 }
 
+.logo_wrapper {
+  width: 80px;
+  height: 50px;
+}
+
 .hamburger_icon {
   margin: auto 0;
   display: none;
