--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -36,6 +36,10 @@
 .intro_text {
   font-size: 25px;
 }
+.slide_image {
+  width: 100%;
+  max-height: 700px;
+}
 /* mobile menu */
 @media only screen and (max-width: 600px) {
   .product_list {
