--- a/component/footer/Footer.module.css
+++ b/component/footer/Footer.module.css
@@ -33,7 +33,7 @@
 
 .col_left_inner .title {
   color: #f1f1f1;
-  font-size: 180%;
+  font-size: 150%;
   font-weight: normal;
   margin-block-start: 0.83em;
   margin-block-end: 0.83em;
@@ -77,8 +77,8 @@
 .col_wrapper {
   margin: auto;
   display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-gap: 200px;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 100px;
   padding: 50px;
   max-width: 1140px;
 }
@@ -103,7 +103,7 @@
 }
 
 .text1 {
-  font-size: 18px;
+  font-size: 16px;
 }
 .phone {
   display: block;
@@ -115,10 +115,43 @@
   font-weight: 600;
 }
 
+.social_image_wrapper {
+  display: flex;
+  flex-direction: row;
+  column-gap: 10px;
+  box-shadow: 0 0 0 0 #0a0204;
+  background-color: #0a0204;
+  padding: 0 0;
+}
+
+.social_image .fb_icon {
+  box-shadow: 0 0 0 0 #0a0204;
+  background-color: #0a0204;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+}
+
+.social_image .zalo_icon {
+  box-shadow: 0 0 0 0 #0a0204;
+  background-color: #0a0204;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+}
+
+.social_image .insta_icon {
+  box-shadow: 0 0 0 0 #0a0204;
+  background-color: #0a0204;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+}
+
 /* mobile menu */
 @media only screen and (max-width: 600px) {
   .contact_discount {
-    padding: 30px;
+    padding: 50px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -140,6 +173,10 @@
     display: grid;
     grid-gap: 50px;
     grid-template-columns: 1fr;
+  }
+
+  .social_image_wrapper {
+    padding: 0 0;
   }
 }
 
