--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -49,4 +49,22 @@
   .product_inner {
     text-align: center;
   }
+  .slide_image {
+    width: 100%;
+    max-height: 700px;
+  }
+}
+
+@media only screen and (max-width: 950px) {
+  .product_list {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
+  .product_inner {
+    text-align: center;
+  }
+  .slide_image {
+    width: 100%;
+    max-height: 700px;
+  }
 }
