--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -46,12 +46,16 @@
     display: grid;
     grid-template-columns: 1fr;
   }
+  .slide_image {
+    width: 100%;
+    max-height: 700px;
+  }
   .product_inner {
     text-align: center;
   }
 }
 
-@media only screen and (max-width: 950px) {
+/* @media only screen and (min-width: 850px) and (max-width: 950px) {
   .product_list {
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -59,4 +63,4 @@
   .product_inner {
     text-align: center;
   }
-}
+} */
