--- a/component/header/Header.module.css
+++ b/component/header/Header.module.css
@@ -39,7 +39,7 @@
 
 .logo_wrapper {
   width: 80px;
-  height: 56px;
+  height: 50px;
 }
 
 .hamburger_icon {
@@ -81,6 +81,7 @@
   .header {
     padding: 0 20px;
     justify-content: space-between;
+    align-items: center;
     color: white;
   }
   .menu_wrapper {
