--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -11,6 +11,8 @@
 .product_list {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
+  align-items: center;
+  justify-items: center;
 }
 .product_intro {
   font-weight: normal;
@@ -41,10 +43,17 @@
   max-height: 700px;
 }
 
+.image {
+  max-width: 100%;
+  height: 220px;
+}
+
 @media only screen and (min-width: 768px) and (max-width: 950px) {
   .product_list {
     display: grid;
     grid-template-columns: 1fr 1fr;
+    align-items: center;
+    justify-items: center;
   }
   .product_intro {
     text-align: center;
@@ -59,6 +68,8 @@
   .product_list {
     display: grid;
     grid-template-columns: 1fr;
+    align-items: center;
+    justify-items: center;
   }
   .product_intro {
     text-align: center;
